# fer-mentor

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: keep-warm.yml  tests.yml
backend/: API_NOTES.md
backend/app/: deps.py  main.py  name_search.py  observability.py  ratelimit.py  routes.py
core/: __init__.py  config.py  db.py  errors.py  ingest_log.py  links.py  metrics.py  models.py  schemas.py
data/: Raspored obrana - Diplomski rad.html  Raspored obrana - Završni rad.html
docker/initdb/: 01-extensions.sql
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vitest.config.ts
frontend/e2e/: edge-cases.spec.ts  electives-flow.spec.ts  error-states.spec.ts  keyboard-flow.spec.ts  navigation.spec.ts  overflow.spec.ts  (+1 more)
frontend/e2e-prod/: prod-api.spec.ts  prod-smoke.spec.ts
ingestion/: __init__.py  harvest_courses.py  harvest_repo.py  normalize.py  parse_courses.py  parse_schedule.py
recommender/: __init__.py  cache.py  cli.py  embedder.py  recommend.py  recommend_courses.py  similar.py  textmatch.py
scripts/: build_course_embeddings.py  build_embeddings.py  ingest.py  ingest_courses.py  init_db.py  make_og_image.ps1
tests/: conftest.py  test_api.py  test_cache.py  test_ingestion.py  test_name_search.py  test_recommend_courses_unit.py  test_scoring.py  test_textmatch.py
(+58 files in other folders)
