[project]
name = "fermentor"
version = "0.1.0"
description = "FERmentor — recommends FER thesis mentors from a free-text topic description"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Installed per workstream so each agent pulls only what it needs.
ingestion = ["httpx>=0.27", "lxml>=5.2", "beautifulsoup4>=4.12", "rapidfuzz>=3.9"]
ml = ["sentence-transformers>=3.0", "numpy>=1.26"]
backend = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "rapidfuzz>=3.9",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0",
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["core"]
